# hello

./: pyproject.toml  setup.cfg
hello/: .project.toml.swp
hello/scripts/: say_hello.py
